k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eadmin
  labels:
    app: eadmin-guinee
    environment: production
